@@ -2,8 +2,10 @@ package info.weboftrust.ldsignatures.suites;
 
 import com.danubetech.keyformats.jose.JWSAlgorithm;
 import com.danubetech.keyformats.jose.KeyTypeName;
+import info.weboftrust.ldsignatures.jsonld.LDSecurityContexts;
 
 import java.net.URI;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -20,6 +22,7 @@ public class BbsBlsSignature2020SignatureSuite extends SignatureSuite {
 				List.of(KeyTypeName.Bls12381G1,
 						KeyTypeName.Bls12381G2),
 				Map.of(KeyTypeName.Bls12381G1, List.of(JWSAlgorithm.BBSPlus),
-						KeyTypeName.Bls12381G2, List.of(JWSAlgorithm.BBSPlus)));
+						KeyTypeName.Bls12381G2, List.of(JWSAlgorithm.BBSPlus)),
+				Arrays.asList(LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_BBS_V1, LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_V3));
 	}
 }
