@@ -2,8 +2,10 @@ package info.weboftrust.ldsignatures.suites;
 
 import com.danubetech.keyformats.jose.JWSAlgorithm;
 import com.danubetech.keyformats.jose.KeyTypeName;
+import info.weboftrust.ldsignatures.jsonld.LDSecurityContexts;
 
 import java.net.URI;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -18,6 +20,7 @@ public class JcsEd25519Signature2020SignatureSuite extends SignatureSuite {
 				URI.create("http://w3id.org/digests#sha256"),
 				URI.create("http://w3id.org/security#ed25519"),
 				List.of(KeyTypeName.Ed25519),
-				Map.of(KeyTypeName.Ed25519, List.of(JWSAlgorithm.EdDSA)));
+				Map.of(KeyTypeName.Ed25519, List.of(JWSAlgorithm.EdDSA)),
+				Arrays.asList(LDSecurityContexts.JSONLD_CONTEXT_W3ID_SUITES_ED25519_2020_V1, LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_V3));
 	}
 }
