@@ -2,8 +2,10 @@ package info.weboftrust.ldsignatures.suites;
 
 import com.danubetech.keyformats.jose.JWSAlgorithm;
 import com.danubetech.keyformats.jose.KeyTypeName;
+import info.weboftrust.ldsignatures.jsonld.LDSecurityContexts;
 
 import java.net.URI;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -26,6 +28,7 @@ public class JsonWebSignature2020SignatureSuite extends SignatureSuite {
 						KeyTypeName.Ed25519, List.of(JWSAlgorithm.EdDSA),
 						KeyTypeName.secp256k1, List.of(JWSAlgorithm.ES256K),
 						KeyTypeName.P_256, List.of(JWSAlgorithm.ES256),
-						KeyTypeName.P_384, List.of(JWSAlgorithm.ES384)));
+						KeyTypeName.P_384, List.of(JWSAlgorithm.ES384)),
+				Arrays.asList(LDSecurityContexts.JSONLD_CONTEXT_W3ID_SUITES_JWS_2020_V1, LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_V3));
 	}
 }
